src/styles/markdown.scss
@import 'globals/variables';

.markdown-body {
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  word-wrap: break-word;
  font-size: 15px;
}

.markdown-body s {
  text-decoration: line-through;
}

.markdown-body .octicon {
  display: inline-block;
  vertical-align: text-top;
  fill: currentColor;
}

.markdown-body a {
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
}

.markdown-body a:active,
.markdown-body a:hover {
  outline-width: 0;
}

.markdown-body strong {
  font-weight: inherit;
}

.markdown-body strong {
  font-weight: bolder;
}

.markdown-body svg:not(:root) {
  overflow: hidden;
}

.markdown-body [type='checkbox'] {
  box-sizing: border-box;
  padding: 0;
}

.markdown-body * {
  box-sizing: border-box;
}

.markdown-body input {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  overflow: visible;
}

.markdown-body a {
  color: #0366d6;
  text-decoration: none;
}

.HtmlViewer a:hover:not(.anchor),
.markdown-body a:hover:not(.anchor) {
  text-decoration: underline;
}

.markdown-body strong {
  font-weight: bold;
}

.markdown-body hr {
  height: 0.25em;
  padding: 0;
  margin: 30px;
  background-color: $light-gray;
  border: 0;
  box-sizing: content-box;
  overflow: visible;
}

.markdown-body hr::before {
  display: table;
  content: '';
}

.markdown-body hr::after {
  display: table;
  clear: both;
  content: '';
}

.markdown-body table {
  border-spacing: 0;
  border-collapse: collapse;
}

.markdown-body td,
.markdown-body th {
  padding: 0;
  text-align: left;
  vertical-align: top;
}

.markdown-body p {
  margin-top: 0;
  margin-bottom: 14px;
  line-height: 2.2;

  &:last-child {
    margin-bottom: 0;
  }
}

.markdown-body li code,
.markdown-body p code {
  color: #e74c3c;
}

.markdown-body blockquote {
  margin: 0;
  line-height: 1.6;
}

.markdown-body ul,
.markdown-body ol {
  padding-left: 0;
  margin-top: 0;
  margin-bottom: 0;
  line-height: 1.35;
}

.markdown-body ol ol,
.markdown-body ul ol {
  list-style-type: lower-roman;
}

.markdown-body ul ul ol,
.markdown-body ul ol ol,
.markdown-body ol ul ol,
.markdown-body ol ol ol {
  list-style-type: lower-alpha;
}

.markdown-body dd {
  margin-left: 0;
}

.markdown-body::before {
  display: table;
  content: '';
}

.markdown-body::after {
  display: table;
  clear: both;
  content: '';
}

.markdown-body > *:first-child {
  margin-top: 0 !important;
}

.markdown-body > *:last-child {
  margin-bottom: 0 !important;
}

.markdown-body a:not([href]) {
  color: inherit;
  text-decoration: none;
}

.HtmlViewer .anchor,
.markdown-body .anchor {
  color: transparent;
  float: left;
  line-height: 1;
  font-size: 16px;
  position: absolute;
  top: 50%;
  left: -30px;
  margin-top: -15px;
  width: 30px;
  padding: 5px;
}

.HtmlViewer .anchor:focus,
.markdown-body .anchor:focus {
  outline: none;
}

.markdown-body p,
.markdown-body blockquote,
.markdown-body ul,
.markdown-body ol,
.markdown-body dl,
.markdown-body table,
.markdown-body pre {
  margin-top: 0;
  margin-bottom: 16px;
}

.markdown-body blockquote {
  padding: 0 1em;
  color: #6a737d;
  border-left: 0.25em solid $light-gray;
}

.markdown-body blockquote > :first-child {
  margin-top: 0;
}

.markdown-body blockquote > :last-child {
  margin-bottom: 0;
}

.markdown-body h1,
.markdown-body h2,
.markdown-body h3,
.markdown-body h4,
.markdown-body h5,
.markdown-body h6 {
  font-weight: bold;
  line-height: 1.25;
  position: relative;
}

.markdown-body h1 .octicon-link,
.markdown-body h2 .octicon-link,
.markdown-body h3 .octicon-link,
.markdown-body h4 .octicon-link,
.markdown-body h5 .octicon-link,
.markdown-body h6 .octicon-link {
  color: #1b1f23;
  vertical-align: middle;
  visibility: hidden;
}

.HtmlViewer h1:hover .anchor,
.HtmlViewer h2:hover .anchor,
.HtmlViewer h3:hover .anchor,
.markdown-body h1:hover .anchor,
.markdown-body h2:hover .anchor,
.markdown-body h3:hover .anchor {
  text-decoration: none;
  color: #666;
}

.HtmlViewer a.anchor:hover,
.markdown-body a.anchor:hover {
  text-decoration: none;
  color: #666;
}

.HtmlViewer h1,
.markdown-body h1 {
  font-size: 28px;
  margin: 70px 0 24px 0;
  font-weight: bolder;
  position: relative;

  .anchor {
    margin-top: -11px;
  }

  &::before {
    content: ' ';
    position: absolute;
    top: -30px;
    left: 0;
    height: 1px;
    width: 100%;
    background-color: $light-gray;
  }

  &:first-child {
    margin: 0 0 1.5em 0;
    padding: 0;

    &::before {
      display: none;
    }
  }
}

.markdown-body h2 {
  font-size: 20px;
  margin-top: 24px;
  margin-bottom: 16px;
  padding-bottom: 0.3em;
}

.markdown-body h3 {
  font-size: 16px;
  margin-top: 24px, 16px;
  margin-bottom: 16px, 16px;
}

.markdown-body h4 {
  font-size: 13px;
  margin-top: 24px, 13px;
  margin-bottom: 16px, 13px;
}

.markdown-body h5,
.markdown-body h6 {
  font-size: 11px;
  margin-top: 24px, 11px;
  margin-bottom: 16px, 11px;
}

.markdown-body h1,
.markdown-body h2,
.markdown-body h3,
.markdown-body h4,
.markdown-body h5,
.markdown-body h6 {
  &:first-child {
    margin-top: 0;
  }
}

.markdown-body h6 {
  color: #6a737d;
}

.markdown-body ul,
.markdown-body ol {
  padding-left: 1.8em;
}

.markdown-body ul ul,
.markdown-body ul ol,
.markdown-body ol ol,
.markdown-body ol ul {
  margin-top: 0;
  margin-bottom: 0;
}

.markdown-body li > p {
  margin-top: 16px;
}

.markdown-body li + li {
  margin-top: 0.25em;
}

.markdown-body dl {
  padding: 0;
}

.markdown-body dl dt {
  padding: 0;
  margin-top: 16px;
  font-size: 1em;
  font-style: italic;
  font-weight: bold;
}

.markdown-body dl dd {
  padding: 0 16px;
  margin-bottom: 16px;
}

.markdown-body table {
  display: block;
  max-width: 100%;
  overflow: auto;
}

.markdown-body thead,
.markdown-body body {
  border-left: 1px solid $light-gray;
  border-right: 1px solid $light-gray;
}

.markdown-body table th {
  font-weight: bolder;
  white-space: nowrap;
}

.markdown-body table th,
.markdown-body table td {
  padding: 6px 13px;
  border: 1px solid $light-gray;

  &:first-child {
    border-left: none;
  }

  &:last-child {
    border-right: none;
  }
}

.markdown-body table tr {
  background-color: #fff;
  border-top: 1px solid $light-gray;
}

.markdown-body table tr:nth-child(2n) {
  background-color: #f6f8fa;
}

.markdown-body img {
  box-sizing: content-box;
  background-color: #fff;
  border-style: none;
  max-width: 760px;
  box-shadow: 0 0px 3px rgba(black, 0.3);
  border-radius: 2px;
}

.markdown-body .highlight {
  margin-bottom: 16px;
}

.markdown-body code,
.markdown-body kbd,
.markdown-body pre {
  white-space: pre-wrap;
}

.markdown-body pre {
  padding: 16px 18px;
  overflow: auto;
  background-color: #f6f8fa;
  border-radius: 2px;
  word-break: normal;
  word-wrap: normal;
  border-radius: 2px;
}

.markdown-body pre code {
  display: inline;
  max-width: auto;
  padding: 0;
  margin: 0;
  overflow: visible;
  line-height: inherit;
  word-wrap: normal;
  word-break: break-word;
  background: transparent;
  border: 0;
}

.markdown-body pre code::before,
.markdown-body pre code::after {
  content: normal;
}

.markdown-body code {
  padding: 0;
  padding-top: 0.2em;
  padding-bottom: 0.2em;
  margin: 0;
  font-size: 85%;
  background-color: rgba(27, 31, 35, 0.05);
  border-radius: 2px;
}

.markdown-body code::before,
.markdown-body code::after {
  letter-spacing: -0.2em;
  content: '\00a0';
}

.markdown-body .full-commit .btn-outline:not(:disabled):hover {
  color: #005cc5;
  border-color: #005cc5;
}

.markdown-body :checked + .radio-label {
  position: relative;
  z-index: 1;
  border-color: #0366d6;
}

.markdown-body .task-list-item {
  list-style-type: none;
}

.markdown-body .task-list-item input:checked + label {
  text-decoration: line-through;
}

.markdown-body .task-list-item + .task-list-item {
  margin-top: 3px;
}

.markdown-body .task-list-item input {
  margin: 0 0.2em 0.25em -1.6em;
  vertical-align: middle;
}

